--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.10.1",
     "aos": "^2.3.4",
     "firebase": "^10.5.0",
+    "firebase-tools": "^12.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
